%% 지하철 노선 기반 관광 추천 서비스 (MetroTrip) ERD
%% 근거 문서 : 데이터베이스 명세서 V1.11
%% 23개 테이블 / 146컬럼 / FK 35건 / UNIQUE 11 / CHECK 22
%% 표기 : ||--o{ = 부모 필수(자식 FK NOT NULL) / |o--o{ = 부모 선택(자식 FK NULL 허용)

erDiagram
    users ||--o{ user_agreements : "user_id"
    users ||--o{ social_accounts : "user_id"
    users ||--o{ auth_tokens : "user_id"
    users |o--o{ email_verifications : "user_id"
    subway_lines ||--o{ line_stations : "line_id"
    stations ||--o{ line_stations : "station_id"
    subway_lines ||--o{ train_timetables : "line_id"
    stations ||--o{ train_timetables : "station_id"
    stations |o--o{ train_timetables : "destination_station_id"
    users |o--o{ places : "created_by"
    places ||--o{ place_stations : "place_id"
    stations ||--o{ place_stations : "station_id"
    places ||--o{ place_images : "place_id"
    users ||--o{ station_favorites : "user_id"
    stations ||--o{ station_favorites : "station_id"
    users ||--o{ travel_plans : "user_id"
    stations ||--o{ travel_plans : "start_station_id"
    stations ||--o{ travel_plans : "end_station_id"
    travel_plans ||--o{ travel_plan_items : "plan_id"
    places ||--o{ travel_plan_items : "place_id"
    stations |o--o{ travel_plan_items : "station_id"
    users ||--o{ reviews : "user_id"
    stations ||--o{ reviews : "start_station_id"
    stations ||--o{ reviews : "end_station_id"
    travel_plans |o--o{ reviews : "plan_id"
    reviews ||--o{ review_media : "review_id"
    reviews ||--o{ review_tags : "review_id"
    users |o--o{ notices : "admin_id"
    subway_lines ||--o{ line_view_logs : "line_id"
    users |o--o{ line_view_logs : "user_id"
    users ||--o{ board_posts : "user_id"
    travel_plans |o--o{ board_posts : "plan_id"
    board_posts ||--o{ post_participants : "post_id"
    users ||--o{ post_participants : "user_id"
    travel_plans ||--o{ travel_plan_share_links : "plan_id"

    users {
        BIGINT user_id PK
        VARCHAR_255 email UK
        VARCHAR_255 password "nullable"
        VARCHAR_50 name
        VARCHAR_30 nickname UK
        VARCHAR_20 phone "nullable"
        VARCHAR_20 role
        DATETIME created_at
        DATETIME updated_at
    }
    user_agreements {
        BIGINT agreement_id PK
        BIGINT user_id FK
        VARCHAR_30 agreement_type
        TINYINT is_agreed
        DATETIME agreed_at
    }
    social_accounts {
        BIGINT social_account_id PK
        BIGINT user_id FK
        VARCHAR_20 provider UK
        VARCHAR_100 provider_user_id UK
        DATETIME connected_at
    }
    auth_tokens {
        BIGINT token_id PK
        BIGINT user_id FK
        VARCHAR_512 refresh_token UK
        DATETIME issued_at
        DATETIME expires_at
        DATETIME revoked_at "nullable"
        VARCHAR_255 user_agent "nullable"
    }
    email_verifications {
        BIGINT verification_id PK
        BIGINT user_id FK "nullable"
        VARCHAR_255 email
        VARCHAR_20 purpose
        VARCHAR_255 code_hash
        DATETIME expires_at
        INT attempt_count
        DATETIME verified_at "nullable"
        DATETIME created_at
    }
    subway_lines {
        BIGINT line_id PK
        VARCHAR_50 line_name UK
        VARCHAR_10 line_number "nullable"
        INT display_order
    }
    stations {
        BIGINT station_id PK
        VARCHAR_100 station_name
        DECIMAL latitude
        DECIMAL longitude
        VARCHAR_255 address "nullable"
    }
    line_stations {
        BIGINT line_station_id PK
        BIGINT line_id FK,UK
        BIGINT station_id FK,UK
        INT station_order
    }
    train_timetables {
        BIGINT timetable_id PK
        VARCHAR_20 train_no "nullable"
        BIGINT line_id FK
        BIGINT station_id FK
        VARCHAR_10 day_type
        VARCHAR_10 direction
        TIME arrival_time "nullable"
        TIME departure_time "nullable"
        BIGINT destination_station_id FK "nullable"
    }
    places {
        BIGINT place_id PK
        VARCHAR_100 place_name
        VARCHAR_30 category
        TEXT description "nullable"
        VARCHAR_255 address
        DECIMAL latitude
        DECIMAL longitude
        VARCHAR_20 phone "nullable"
        BIGINT created_by FK "nullable"
        DATETIME created_at
        DATETIME updated_at
    }
    place_stations {
        BIGINT place_station_id PK
        BIGINT place_id FK
        BIGINT station_id FK
    }
    place_images {
        BIGINT place_image_id PK
        BIGINT place_id FK,UK
        VARCHAR_500 image_url
        INT sort_order UK
    }
    station_favorites {
        BIGINT favorite_id PK
        BIGINT user_id FK,UK
        BIGINT station_id FK,UK
        DATETIME created_at
    }
    travel_plans {
        BIGINT plan_id PK
        BIGINT user_id FK
        VARCHAR_100 plan_title
        BIGINT start_station_id FK
        BIGINT end_station_id FK
        DATETIME created_at
        DATETIME updated_at
    }
    travel_plan_items {
        BIGINT plan_item_id PK
        BIGINT plan_id FK
        BIGINT place_id FK
        BIGINT station_id FK "nullable"
        TIME visit_time
        VARCHAR_255 memo "nullable"
    }
    reviews {
        BIGINT review_id PK
        BIGINT user_id FK
        VARCHAR_100 title
        TEXT content
        BIGINT start_station_id FK
        BIGINT end_station_id FK
        TINYINT rating
        INT travel_cost "nullable"
        BIGINT plan_id FK "nullable"
        INT view_count
        DATETIME created_at
        DATETIME updated_at
    }
    review_media {
        BIGINT media_id PK
        BIGINT review_id FK
        VARCHAR_500 media_url
        VARCHAR_10 media_type
    }
    review_tags {
        BIGINT review_tag_id PK
        BIGINT review_id FK,UK
        VARCHAR_30 tag_name UK
    }
    notices {
        BIGINT notice_id PK
        BIGINT admin_id FK "nullable"
        VARCHAR_200 title
        TEXT content
        VARCHAR_20 notice_type
        DATETIME created_at
        DATETIME updated_at
    }
    line_view_logs {
        BIGINT log_id PK
        BIGINT line_id FK
        BIGINT user_id FK "nullable"
        DATETIME viewed_at
    }
    board_posts {
        BIGINT post_id PK
        BIGINT user_id FK
        VARCHAR_100 title
        TEXT content
        INT view_count
        INT recruit_capacity
        DATE recruit_deadline
        VARCHAR_20 recruit_status
        DATE meeting_date "nullable"
        BIGINT plan_id FK "nullable"
        DATETIME created_at
        DATETIME updated_at
    }
    post_participants {
        BIGINT participant_id PK
        BIGINT post_id FK,UK
        BIGINT user_id FK,UK
        VARCHAR_20 status
        DATETIME applied_at
        DATETIME responded_at "nullable"
    }
    travel_plan_share_links {
        BIGINT share_link_id PK
        BIGINT plan_id FK
        VARCHAR_64 token_hash UK
        DATETIME created_at
        DATETIME expires_at
        DATETIME revoked_at "nullable"
    }
